# ru-address-parser

./: CHANGELOG.md  Dockerfile  Makefile  README.org  address-parser.cabal
app/: Main.hs
server/: Main.hs
src/: AddressParser.hs  IE.hs  Parser.hs
src/AddressParser/: Internal.hs
tests/: my-test.hs
