cabal-version:      2.4
name:               address-parser
version:            0.1.0.0

author:             vaddson
maintainer:         vaddson@aaa.aaa

extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
                    , Parser
                    , AddressParser.Internal
                    , AddressParser
                    , IE
    build-depends:
        -- base ^>=4.16.4.0,
        base >=4.14.3.0,
        bytestring,
        aeson,
        aeson-pretty,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable ru-address-parser
    main-is:          Main.hs
    build-depends:
        -- base ^>=4.16.4.0,
        base >=4.14.3.0,
        monad-loops,
        address-parser

    hs-source-dirs:   app
    default-language: Haskell2010

executable ru-address-parser-server
    main-is:          Main.hs
    build-depends:
        -- base ^>=4.16.4.0,
        base >=4.14.3.0,
        http-types, wai, warp,
        containers,
        bytestring,
        text,
        address-parser
    hs-source-dirs:   server
    default-language: Haskell2010

test-suite my-test
    type: exitcode-stdio-1.0
    main-is: my-test.hs
    build-depends:
        -- base ^>=4.16.4.0,
        base >=4.14.3.0,
        HUnit,
        address-parser
    hs-source-dirs: tests
